# basic-qt6-cmake

./: CMakeLists.txt  LICENSE  README.md
include/: mainwindow.h
src/: main.cpp  mainwindow.cpp
tests/: test_hello.cpp
